# TicTacToe-ProjectHaskell

./: CHANGELOG.md  README.md  tictactoe-2dhaskell.cabal
.stack-work/: stack.sqlite3
.stack-work/ghci/2c5d1de8/: cabal_macros.h
.stack-work/ghci/4a544787/: cabal_macros.h
.stack-work/ghci/cd827dcb/: cabal_macros.h
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
src/: Main.hs  TicTacToe.hs
